--- a/pages/mypid/mypid.wxss
+++ b/pages/mypid/mypid.wxss
@@ -94,57 +94,132 @@
 
 .bottom{
   background-color: #eee;
-  border-bottom-left-radius: 20rpx;
-  border-bottom-right-radius: 20rpx;
 }
 
 
-.item{
+.items {
   width: 100%;
-  height: 80rpx;
+}
+
+.item {
+  width: 100%;
+  padding-top: 20rpx;
+}
+
+.item-head {
+  height: 100rpx;
+  width: 100%;
   background-color: #eee;
+  border-bottom: 1rpx solid #ddd;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  border-bottom: 2rpx solid #aaa;
-  font-size: 85%;
+  justify-content: flex-start;
+  border-radius: 20rpx;
 }
-.item-name{
+
+.item-head-left {
   width: 30%;
   height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  letter-spacing: 1rpx;
+  justify-content: flex-start;
+  padding-left: 5%;
 }
 
-.item-time{
-  width: 30%;
+.item-head-mid {
+  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  color: #444;
-
+  justify-content: flex-end;
+  padding-right: 5%;
+  font-size: 99%;
+  color: #777;
 }
-.item-price{
+
+.xiangxia {
+  width: 50rpx;
+  height: 50rpx;
+}
+
+.xiangxia image {
+  width: 100%;
+  height: 100%;
+}
+
+.item-foot {
+  width: 100%;
+  background-color: #f8f8f8;
+  border-radius: 20rpx;
+}
+
+.item-foot-item {
+  width: 100%;
+  height: 90rpx;
+  border-bottom: 2rpx #ddd solid;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.item-left {
   width: 20%;
   height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: 95%;
+  color: #222;
+}
+
+.item-right {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 95%;
+}
+
+.item-botton{
+  width: 80%;
+  height: 80%;
   
-  color: #d00;
-}
-.item-status{
-  width: 20%;
-  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  background-color: red;
+  border-radius: 20rpx;
+  color: #fff;
+  font-size: 105%;
+  letter-spacing: 5rpx;
+}
+
+
+.item-right input {
+  width: 85%;
+  padding-left: 5%;
+  height: 80%;
+  
+  background-color: #eaeaea;
+  border-bottom: 1rpx solid #ddd;
+}
+
+
+.backcolor1{
+  background-color: #eee;
+}
+
+.backcolor2{
+  background-color: #aaa;
+}
+.backcolor3{
+  background-color: rgb(0, 255, 128);
 }
