--- a/pages/mypid/mypid.wxml
+++ b/pages/mypid/mypid.wxml
@@ -106,7 +106,7 @@
               <text>起拍时间</text>
             </view>
             <view class='item-right'>
-              <input class='studentId' type='text' value='{{item.foods.starttime}}'></input>
+              <input class='studentId' type='text'  value='{{item.foods.starttime}}'></input>
             </view>
           </view>
           <view class='item-foot-item'>
@@ -114,7 +114,7 @@
               <text>起拍价格</text>
             </view>
             <view class='item-right'>
-              <input class='studentId' type='text' value="{{item.foods.startprice+' 元'}}"></input>
+              <input class='studentId' type='text'  value="{{item.foods.startprice+' 元'}}"></input>
             </view>
           </view>
           <view class='item-foot-item'>
@@ -122,7 +122,7 @@
               <text>竞拍者</text>
             </view>
             <view class='item-right'>
-              <input class='password' type='text' value='{{item.buyername}}'></input>
+              <input class='password' type='text' value="{{item.buyername==null?'暂无竞拍者':item.buyername}}"></input>
             </view>
           </view>
           <view class='item-foot-item'>
@@ -130,7 +130,7 @@
               <text>竞拍价格</text>
             </view>
             <view class='item-right'>
-              <input class='studentId' type='text' value="{{item.buyerprice+' 元'}}"></input>
+              <input class='studentId' type='text' value="{{item.buyerprice==null?'暂无价格':item.buyerprice+' 元'}}"></input>
             </view>
           </view>
           <view class='item-foot-item'>
